[gd_scene load_steps=5 format=2]

[ext_resource path="res://ShooterFish1.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 23.0
height = 4.0

[node name="ShooterFish1" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, -1, -1.06581e-14, -4.37114e-08, -8.74742e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="AreaCollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -2, -1.50996e-07, 0, 3.01992e-07, -1, 0, 3.5, 0 )
shape = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -23 )

[node name="Timer" type="Timer" parent="."]

[node name="Shooter" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
